[Animbus]feature: Add octopus to kolla-ansible
Add octopus to kolla-ansible

Issue: 42480
Change-Id: I7e3840df8ae01292bed5e334ef49294431579a1b

--- a/ansible/roles/common/templates/cron.json.j2
+++ b/ansible/roles/common/templates/cron.json.j2
@@ -9,6 +9,7 @@
     ( 'chrony', enable_chrony ),
     ( 'cinder', enable_cinder ),
     ( 'cloudkitty', enable_cloudkitty ),
+    ( 'octopus', enable_octopus ),
     ( 'collectd', enable_collectd ),
     ( 'congress', enable_congress ),
     ( 'cyborg', enable_cyborg ),
