--- a/ansible/roles/common/templates/conf/input/00-global.conf.j2
+++ b/ansible/roles/common/templates/conf/input/00-global.conf.j2
@@ -6,6 +6,7 @@
     ( 'ceilometer', enable_ceilometer ),
     ( 'cinder', enable_cinder ),
     ( 'cloudkitty', enable_cloudkitty ),
+    ( 'octopus', enable_octopus ),
     ( 'congress', enable_congress ),
     ( 'cyborg', enable_cyborg ),
     ( 'designate', enable_designate ),
